Prod-EU/force-app/main/default/objects/Account_Link__c/Account_Link__c.object-meta.xml
<CustomObject>
    <description>This Object will store Dexcom and SF Account Ids with Username</description>
    <label>Account Link</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AccountLink</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>