Prod-EU/force-app/main/default/objects/Account_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Custom Field will store Salesforce Account Id</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Links</relationshipLabel>
    <relationshipName>Account_Links</relationshipName>
    <type>Lookup</type>
</CustomField>