Prod-EU/force-app/main/default/objects/Account_Link__c/fields/Dexcom_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_Account_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This custom field will store Dexcom Account GUID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Dexcom Account Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>