Prod-EU/force-app/main/default/objects/Account_Link__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>This Custom Field will store the Dexcom username</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>